# geeko-gtk-theme

./: Makefile.am  README.md  arc-theme-upgrade  configure.ac
additions/: README.md  arc-theme-upgrade  convert.sh
additions/common/gnome-shell/3.14/: gnome-shell-dark.css  gnome-shell.css
additions/common/gnome-shell/3.16/: gnome-shell-dark.css  gnome-shell.css
additions/common/gnome-shell/3.18/: gnome-shell-dark.css  gnome-shell.css
additions/common/metacity-1/: metacity-theme-1.xml  metacity-theme-2.xml
additions/m4/: arc-geeko-enable.m4  arc-geeko-gnome.m4
additions/screenshots/: Screenshot from 2017-12-18 06-24-26.png~  Screenshot from 2017-12-18 06-24-42.png~
common/: Makefile.am  index.theme  index.theme-dark  index.theme-darker
common/cinnamon/: cinnamon-dark.css  cinnamon.css
common/cinnamon/sass/: _colors.scss  _common.scss
common/gnome-shell/3.14/: gnome-shell-dark.css  gnome-shell.css
common/gnome-shell/3.14/sass/: _common.scss
common/gnome-shell/3.16/: gnome-shell-dark.css  gnome-shell.css
common/gnome-shell/3.16/sass/: _common.scss
common/gnome-shell/3.18/: gnome-shell-dark.css  gnome-shell.css
common/gnome-shell/3.18/sass/: _common.scss
common/gtk-2.0/: apps.rc  gtkrc  gtkrc-dark  gtkrc-darker  panel.rc  xfce-notify.rc
common/gtk-2.0/menubar-toolbar/: menubar-toolbar-dark.rc  menubar-toolbar.rc
common/gtk-3.0/3.14/: gtk-dark.css  gtk-darker.css  gtk-solid-dark.css  gtk-solid-darker.css  gtk-solid.css  gtk.css
common/gtk-3.0/3.14/sass/: _applications.scss
common/gtk-3.0/3.16/: gtk-dark.css  gtk-darker.css  gtk-solid-dark.css  gtk-solid-darker.css  gtk-solid.css  gtk.css
common/gtk-3.0/3.16/sass/: _applications.scss
common/gtk-3.0/3.18/: gtk-dark.css  gtk-darker.css  gtk-solid-dark.css  gtk-solid-darker.css  gtk-solid.css  gtk.css
common/gtk-3.0/3.18/sass/: _applications.scss  _colors.scss  _unity.scss
common/gtk-3.0/3.20/: gtk-dark.css  gtk-darker.css  gtk-solid-dark.css  gtk-solid-darker.css  gtk-solid.css  gtk.css
common/gtk-3.0/3.20/sass/: _applications.scss  _colors.scss  _unity.scss
common/metacity-1/: metacity-theme-1.xml  metacity-theme-2-dark.xml  metacity-theme-2.xml  metacity-theme-3.xml
common/xfwm4/: themerc  themerc-dark
m4/: arc-geeko-enable.m4
